# ai-newsletter-platform

./: .env.example  .env.template  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  README_ENHANCED.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
data/: generated_newsletters_v2_optimized.json  optimization_comparison_report.json  quality_assessment_v2_optimized.json
database/: schema.sql
deployments/aws/: README.md
docker/strategic/: Dockerfile
docs/: CEO_NEWSLETTER_FRAMEWORK.md  COMMIT_SUMMARY.md  NEWSLETTER_QUALITY_VALIDATION_PLAN.md  OPTIMIZATION_RECOMMENDATIONS.md
infrastructure/kubernetes/base/: deployment.yaml
infrastructure/terraform/gcp/: main.tf
src/execution/: __init__.py
src/execution/agents/: content_agent.py
src/operational/: __init__.py  resource_scheduler.py  workflow_engine.py
src/strategic/: __init__.py  market_intelligence.py  portfolio_manager.py  strategic_planner.py
tests/: test_ai_content_generation.py  test_data_collection.py  test_end_to_end.py  test_subscriber_system.py
tests/unit/strategic/: test_portfolio_manager.py
validation/: generate_newsletters_optimized.py  quality_dashboard.py  real_data_collection.py
