[tool.poetry]
name = "ai-newsletter-platform"
version = "0.1.0"
description = "Enterprise-grade AI-powered newsletter platform with multi-layer orchestrator architecture"
authors = ["Newsletter Platform Team <team@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/ai-newsletter-platform"
repository = "https://github.com/yourusername/ai-newsletter-platform"
keywords = ["ai", "newsletter", "automation", "orchestrator", "mlops"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"
celery = "^5.3.6"
openai = "^1.10.0"
anthropic = "^0.8.1"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
langchain-anthropic = "^0.0.1"
google-cloud-pubsub = "^2.19.0"
google-cloud-storage = "^2.14.0"
azure-servicebus = "^7.11.4"
azure-storage-blob = "^12.19.0"
boto3 = "^1.34.26"
pika = "^1.3.2"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
structlog = "^24.1.0"
httpx = "^0.26.0"
aiohttp = "^3.9.1"
jinja2 = "^3.1.3"
beautifulsoup4 = "^4.12.3"
feedparser = "^6.0.11"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
croniter = "^2.0.1"
apscheduler = "^3.10.4"
tenacity = "^8.2.3"
temporalio = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.12.1"
ruff = "^0.1.13"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
ipython = "^8.20.0"
pytest-xdist = "^3.5.0"
faker = "^22.0.0"
factory-boy = "^3.3.0"
responses = "^0.24.1"
freezegun = "^1.4.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.4"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
